deploy: b844940e38403a499b291198de1630efa577f5e9

--- a/appendix/benchmark.html
+++ b/appendix/benchmark.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Overview - The Plonky3 recursion book</title>
+        <title>Benchmarks - The Plonky3 recursion book</title>
 
 
         <!-- Custom HTML head -->
@@ -12,34 +12,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" id="highlight-css" href="highlight.css">
-        <link rel="stylesheet" id="tomorrow-night-css" href="tomorrow-night.css">
-        <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
 
         <!-- Provide site root and default themes to javascript -->
         <script>
-            const path_to_root = "";
+            const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex.js";
+            window.path_to_searchindex_js = "../searchindex.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../toc.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -106,7 +106,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -141,7 +141,7 @@
                     <h1 class="menu-title">The Plonky3 recursion book</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -176,31 +176,81 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="plonky3-recursion"><a class="header" href="#plonky3-recursion">Plonky3 Recursion</a></h1>
-<p>This book is the user guide for <strong>Plonky3 recursion</strong>, an independent project providing native recursive STARK verification for <a href="https://github.com/Plonky3/Plonky3">Plonky3</a>.</p>
-<p>The library lets you verify Plonky3 STARK proofs inside circuits, chain recursive layers to compress proof size, and aggregate independent proofs into a single attestation. It is built entirely on Plonky3's own STARK primitives — no separate plonkish SNARK wrapper.</p>
-<h2 id="what-this-book-covers"><a class="header" href="#what-this-book-covers">What this book covers</a></h2>
+<h1 id="benchmarks"><a class="header" href="#benchmarks">Benchmarks</a></h1>
+<p>This section presents empirical performance results for the Plonky3 recursion system, including instructions for reproducibility across target machines.</p>
+<p><strong>NOTE</strong>: This library is still at an early stage, parameters have not been finely tuned yet, and as such performance results here may not reflect the full potential of the library.</p>
+<h2 id="setup"><a class="header" href="#setup">Setup</a></h2>
+<p>The reference examples are a Plonky3 uni-stark proof of the Keccak AIR imported directly, a Plonky3 batch-stark proof of the Fibonacci sequence generated with the <code>CircuitBuilder</code> of this library, and a 2-to-1 aggregation tree over basic <code>p3-batch-stark</code> proofs.</p>
 <ul>
-<li><strong><a href="./getting_started/introduction.html">Getting Started</a></strong> — Motivation, design philosophy, and a quick start guide with working examples.</li>
-<li><strong><a href="./user_guide/api.html">User Guide</a></strong> — The unified recursion API, aggregation, configuration, public inputs, integration into your project, and the low-level API for advanced use cases.</li>
-<li><strong><a href="./architecture_and_internals/construction.html">Architecture &amp; Internals</a></strong> — How the fixed recursive verifier is built: the execution IR, witness table, operation-specific chips, circuit building pipeline, trace generation, and Poseidon2-based hashing.</li>
-<li><strong><a href="./advanced_topics/scaling.html">Advanced Topics</a></strong> — Scaling strategies for variable-length inputs, performance tuning, soundness considerations, and debugging tools.</li>
-<li><strong><a href="./appendix/benchmark.html">Appendix</a></strong> — Benchmarks, roadmap, and glossary.</li>
+<li>Keccak example: set number of hashes with <code>-n</code> argument</li>
 </ul>
-<h2 id="quick-links"><a class="header" href="#quick-links">Quick links</a></h2>
+<pre><code class="language-bash">RUSTFLAGS=-Ctarget-cpu=native RUSTFLAGS=-Copt-level=3 RUST_LOG=info cargo run --release \
+    --example recursive_keccak --features parallel -- -n 2500 
+</code></pre>
 <ul>
-<li><strong>Source</strong>: <a href="https://github.com/Plonky3/Plonky3-recursion">github.com/Plonky3/Plonky3-recursion</a></li>
-<li><strong>API docs</strong>: <code>cargo doc --open</code></li>
-<li><strong>Examples</strong>: <code>recursion/examples/</code> — recursive Fibonacci, Keccak, and 2-to-1 aggregation</li>
-<li><strong>License</strong>: Dual MIT / Apache-2.0</li>
+<li>Fibonacci example: set element index in the sequence with <code>-n</code> argument</li>
+</ul>
+<pre><code class="language-bash">RUSTFLAGS=-Ctarget-cpu=native RUSTFLAGS=-Copt-level=3 RUST_LOG=info cargo run --release \
+    --example recursive_fibonacci --features parallel -- -n 10000
+</code></pre>
+<ul>
+<li>2-to-1 aggregation example:</li>
+</ul>
+<pre><code class="language-bash">RUSTFLAGS=-Ctarget-cpu=native RUSTFLAGS=-Copt-level=3 RUST_LOG=info cargo run --release \
+    --example recursive_aggregation --features parallel -- --field koala-bear
+</code></pre>
+<h3 id="parameterization"><a class="header" href="#parameterization">Parameterization</a></h3>
+<p>Each example supports additional parameterization around the FRI parameters, namely:</p>
+<ul>
+<li><code>--log-blowup</code>: logarithmic blowup factor for the LDE. Default 3.</li>
+<li><code>--max-log-arity</code>: maximum arity allowed during the FRI folding phases. Default 4.</li>
+<li><code>--log-final-poly-len</code>: logarithmic size (or degree) allowed for the final polynomial after folding. Default 5.</li>
+<li><code>--cap-height</code>: the height at which the MMCS tree is truncated for commitments. Default 0 (unique root).</li>
+<li><code>--commit-pow-bits</code>: additional PoW grinding during the FRI commit phase. Default 0.</li>
+<li><code>--query-pow-bits</code>: additional PoW grinding during the FRI query phase. Default 16.</li>
+<li><code>--num-recursive-layers</code>: number of recursive proofs to be generated in a chain, starting from the base proof (Keccak or Fibonacci). Default 3.</li>
+</ul>
+<h2 id="results"><a class="header" href="#results">Results</a></h2>
+<p>Running on a Apple M4 pro, 14 Cores, with <strong>KoalaBear</strong> field and extension of <strong>degree 4</strong>, using default parameters mentioned above, performance benchmarks are as follows:</p>
+<ul>
+<li>
+<p><strong>Keccak AIR program:</strong> (1,000 hashes)</p>
+<ul>
+<li>Base uni-stark proof: 1.44 s</li>
+<li>1st recursion layer: 2.71 s</li>
+<li>2nd recursion layer: 374 ms</li>
+<li>3rd recursion layer: 372 ms</li>
+</ul>
+</li>
+<li>
+<p><strong>Fibonacci multi-AIR program:</strong> (10,000th element)</p>
+<ul>
+<li>Base batch-stark proof: 86.1 ms</li>
+<li>1st recursion layer: 243 ms</li>
+<li>2nd recursion layer: 415 ms</li>
+<li>3rd recursion layer: 393 ms</li>
+</ul>
+</li>
+<li>
+<p><strong>2-to-1 aggregation:</strong></p>
+<ul>
+<li>Base batch-stark proof: 30 ms</li>
+<li>1st aggregation layer: 431 ms</li>
+<li>2nd aggregation layer: 825 ms</li>
+<li>3rd and next aggregation layers: 806 ms</li>
+</ul>
+</li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../advanced_topics/debugging.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="getting_started/introduction.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../appendix/roadmap.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -210,8 +260,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../advanced_topics/debugging.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="getting_started/introduction.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../appendix/roadmap.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -226,17 +279,17 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="mermaid.min.js"></script>
-        <script src="mermaid-init.js"></script>
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
 
