--- a/architecture_and_internals/construction.html
+++ b/architecture_and_internals/construction.html
@@ -12,34 +12,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" id="highlight-css" href="highlight.css">
-        <link rel="stylesheet" id="tomorrow-night-css" href="tomorrow-night.css">
-        <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
 
         <!-- Provide site root and default themes to javascript -->
         <script>
-            const path_to_root = "";
+            const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex.js";
+            window.path_to_searchindex_js = "../searchindex.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc.js"></script>
+        <script src="../toc.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -106,7 +106,7 @@
             <!-- populated by js -->
             <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
             <noscript>
-                <iframe class="sidebar-iframe-outer" src="toc.html"></iframe>
+                <iframe class="sidebar-iframe-outer" src="../toc.html"></iframe>
             </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -141,7 +141,7 @@
                     <h1 class="menu-title">The Plonky3 recursion book</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -211,7 +211,7 @@ overhead of handling arbitrary control flow, and makes the resulting AIR(s) stat
 <p><strong>Reusability</strong>: adapting to a new program requires a new circuit.</p>
 </li>
 </ul>
-<p>The rest of this book explains how this approach is built, <a href="extensions.html#strategies">how to soften its rigidity</a>,
+<p>The rest of this book explains how this approach is built, <a href="scaling.html">how to soften its rigidity</a>,
 and why it provides a powerful foundation for recursive proof systems.</p>
 <h2 id="execution-ir"><a class="header" href="#execution-ir">Execution IR</a></h2>
 <p>An <strong>Execution IR</strong> (intermediate representation) is defined to describe the steps of the verifier.
@@ -219,7 +219,7 @@ This IR is <em>not itself proved</em>, but will be used as source of truth betwe
 The actual soundness comes from the constraints inside the operation-specific STARK chips along with an aggregated lookup argument ensuring consistency of the common values they operate on.
 The lookups can be seen as representing the <code>READ</code>/<code>WRITE</code> operations from/to the witness table.</p>
 <p>The example below represents the (fixed) IR associated to the statement <code>37.x - 111 = 0</code>, where <code>x</code> is a public input. It can be reproduced by running</p>
-<pre><code class="language-bash">cargo test --package p3-circuit --lib -- tables::tests::test_toy_example_37_times_x_minus_111 --exact --show-output
+<pre><code class="language-bash">RUST_LOG=debug cargo test --package p3-circuit --lib -- tables::runner::tests::test_toy_example_37_times_x_minus_111 --exact --show-output
 </code></pre>
 <p>A given row of the represented IR contains an operation and its associated operands.</p>
 <pre><code class="language-bash">=== CIRCUIT PRIMITIVE OPERATIONS ===
@@ -227,8 +227,8 @@ The lookups can be seen as representing the <code>READ</code>/<code>WRITE</code>
 1: Const { out: WitnessId(1), val: 37 }
 2: Const { out: WitnessId(2), val: 111 }
 3: Public { out: WitnessId(3), public_pos: 0 }
-4: Mul { a: WitnessId(1), b: WitnessId(3), out: WitnessId(4) }
-5: Add { a: WitnessId(2), b: WitnessId(0), out: WitnessId(4) }
+4: Alu { a: WitnessId(1), b: WitnessId(3), out: WitnessId(4), mul_selector: 1 }
+5: Alu { a: WitnessId(2), b: WitnessId(0), out: WitnessId(4), add_selector: 1 }
 </code></pre>
 <p>i.e. operation 4 performs <code>w[4] &lt;- w[1] * w[3]</code>, and operation 5 encodes the subtraction check as an addition <code>w[2] + w[0] = w[4]</code> (verifying <code>37 * x - 111 = 0</code>).</p>
 <p>In order to generate the IR, the first step is to create all operations symbolically.</p>
@@ -266,7 +266,7 @@ each operation and the interaction between them, the <code>Witness</code> table 
 <li>An AIR that enforces its semantics.</li>
 </ul>
 <p>We distinguish two kind of chips: those representing native, i.e. primitive operations, and additional non-primitive ones, defined at runtime, that serve as precompiles to optimize certain operations.
-The recursion machine contains 4 primitive chips: <code>CONST</code> / <code>PUBLIC_INPUT</code> / <code>ADD</code> and <code>MUL</code>, with <code>SUB</code> and <code>DIV</code> being emulated via the <code>ADD</code> and <code>MUL</code> chips.</p>
+The recursion machine contains 3 primitive chips: <code>CONST</code>, <code>PUBLIC_INPUT</code>, and a unified <code>ALU</code> chip with three selector columns (add/mul, bool-check, mul-add). <code>SUB</code> and <code>DIV</code> are encoded as ALU rows using the add or mul operation.</p>
 <p>Given only the primitive operations, one should be able to carry out most operations necessary in circuit verification. Primitive operations have the following properties:</p>
 <ul>
 <li>They operate on elements of the <code>Witness</code> table, through their <code>WitnessId</code> (index within the <code>Witness</code> table).</li>
@@ -287,11 +287,9 @@ Row 2: WitnessId(w2) = 111
 === PUBLIC TRACE ===
 Row 0: WitnessId(w3) = 3
 
-=== MUL TRACE ===
-Row 0: WitnessId(w1) * WitnessId(w3) -&gt; WitnessId(w4) | 37 * 3 -&gt; 111
-
-=== ADD TRACE ===
-Row 0: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
+=== ALU TRACE ===
+Row 0: mul: WitnessId(w1) * WitnessId(w3) -&gt; WitnessId(w4) | 37 * 3 -&gt; 111
+Row 1: add: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
 </code></pre>
 <p>Note that because we started from a known, fixed program that has been lowered to a deterministic IR, we can have the <code>CONST</code> chip's table entirely preprocessed
 (i.e. known to the verifier), as well as all <code>index</code> columns of the other primitive chips.</p>
@@ -299,29 +297,29 @@ Row 0: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
 <p>All chips interactions are performed via a lookup argument. Enforcing multiset equality between all chip ports and the <code>Witness</code> table entries ensures correctness without proving the execution order of the entire IR itself. Lookups can be seen as <code>READ</code>/<code>WRITE</code> or <code>RECEIVE</code>/<code>SEND</code> interactions between tables which allow global consistency over local AIRs.</p>
 <p>Cross-table lookups (CTLs) ensure that <strong>every</strong> chip interaction happens through the Witness table: producers write a <code>(index, value)</code> pair into Witness and consumers read the same pair back. No chip talks directly to any other chip; the aggregated LogUp argument enforces multiset equality between the writes and reads.</p>
 <p>For the toy example the CTL relations are:<sup class="footnote-reference" id="fr-2-1"><a href="#footnote-2">2</a></sup></p>
-<pre><code class="language-bash">(index 0, value 0)   : CONST → Witness → ADD
-(index 1, value 37)  : CONST → Witness → MUL
-(index 2, value 111) : CONST → Witness → ADD
-(index 3, value 3)   : PUBLIC → Witness → MUL
-(index 4, value 111) : MUL → Witness ← ADD
+<pre><code class="language-bash">(index 0, value 0)   : CONST → Witness → ALU(add row)
+(index 1, value 37)  : CONST → Witness → ALU(mul row)
+(index 2, value 111) : CONST → Witness → ALU(add row)
+(index 3, value 3)   : PUBLIC → Witness → ALU(mul row)
+(index 4, value 111) : ALU(mul row) → Witness ← ALU(add row)
 </code></pre>
 <hr>
 <ol class="footnote-definition"><li id="footnote-1">
 <p>Preprocessed columns / polynomials can be reconstructed manually by the verifier, removing the need for a prover to commit to them and later perform the FRI protocol on them. However, the verifier needs <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">O</span><span class="mopen">(</span><span class="mord mathnormal">n</span><span class="mclose">)</span></span></span></span> work when these columns are not structured, as it still needs to interpolate them. To alleviate this, the Plonky3 recursion stack performs <em>offline</em> commitment of unstructured preprocessed columns, so that we need only one instance of the FRI protocol to verify all preprocessed columns evaluations. <a href="#fr-1-1">↩</a></p>
 </li>
 <li id="footnote-2">
-<p>The <code>ADD</code> and <code>MUL</code> tables both issue CTL writes of their outputs to the same Witness row. Because the Witness table is a <em>read-only</em> / <em>write-once</em> memory bus, the aggregated lookup forces those duplicate writes <code>w4 = 111</code> to agree, which is exactly the constraint <code>37 * 3 = 111 = 0 + 111</code>. <a href="#fr-2-1">↩</a></p>
+<p>The two ALU rows both write <code>w4 = 111</code> to the Witness table (once via a mul row, once via an add row). Because the Witness table is a <em>read-only</em> / <em>write-once</em> memory bus, the aggregated lookup forces those duplicate writes to agree, which is exactly the constraint <code>37 * 3 = 111 = 0 + 111</code>. <a href="#fr-2-1">↩</a></p>
 </li>
 </ol>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../user_guide/low_level_api.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="circuit_building.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../architecture_and_internals/circuit_building.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -331,11 +329,11 @@ Row 0: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../user_guide/low_level_api.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="circuit_building.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../architecture_and_internals/circuit_building.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -350,17 +348,17 @@ Row 0: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="mermaid.min.js"></script>
-        <script src="mermaid-init.js"></script>
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
 
